--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-<h1>Título principal</h1>
+<h1 onmouseover="cumprimentar()">Título principal</h1>
     </main>
+   <script src="./JS/main.js"></script>
+   
 </body>
 </html>
